Commit before bowling and lunch

--- a/ElevenNote.Web/Views/Home/Young.cshtml
+++ b/ElevenNote.Web/Views/Home/Young.cshtml
@@ -1,22 +1,35 @@
 ﻿<h1>Young</h1>
 @{
     List <string> fizzBuzz = new List<string>();
-}
 
-
-    @for (var i = 1; i <= 100; i++)
+    for (var i = 1; i <= 100; i++)
     {
-        if (i % 3 == 0 && i % 5 == 0) { fizzBuzz.Add("FizzBuzz"); }
+        if (i % 3 == 0 && i % 5 == 0)
+        {
+            fizzBuzz.Add("FizzBuzz");
+        }
 
-        else if (i % 3 == 0) { fizzBuzz.Add("Fizz"); }
+        else if (i % 3 == 0)
+        {
+            fizzBuzz.Add("Fizz");
+        }
 
-        else if (i % 5 == 0) { fizzBuzz.Add("Buzz"); }
+        else if (i % 5 == 0)
+        {
+            fizzBuzz.Add("Buzz");
+        }
 
-        else { fizzBuzz.Add(i.ToString()); }
+        else
+        {
+            fizzBuzz.Add(i.ToString());
+        }
 
     }
+}
 
+<select>
     @foreach (var number in fizzBuzz)
     {
+        <option value="@number">@number</option>
     }
-}
+</select> 
