--- a/ElevenNote.Web/Views/Shared/_Layout.cshtml
+++ b/ElevenNote.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Michael", "Michael", "Home")</li>
+                    <li>@Html.ActionLink("Young", "Young", "Home")</li>
+                    <li>@Html.ActionLink("Game", "Index", "Game")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
