last commit for this maybe

--- a/ElevenNote.Web/Views/Notes/Details.cshtml
+++ b/ElevenNote.Web/Views/Notes/Details.cshtml
@@ -17,7 +17,7 @@
         </dt>
 
         <dd>
-            @Html.Raw(Model.Contents.Replace("<script",""))
+            @Html.Raw(Model.Contents.Replace("<script>",""))
         </dd>
 
         <dt>
